Fix aside overlap at exactly 1280px wide
Fixes #288

--- a/stylesheets/body-column.scss
+++ b/stylesheets/body-column.scss
@@ -656,7 +656,7 @@
         right:-140px;
         padding-bottom:10px
       }
-      @media screen and (max-width:1280px) {
+      @media screen and (max-width:1279px) {
         padding-top:30px;
         float:none;
         margin: 5px auto 0;
